--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /v2rayN/v2rayN/bin/Debug/app.publish
 /v2rayN/v2rayN/bin/Debug
 /v2rayN/v2rayN/bin/Release
+/v2rayN/v2rayN/bin/*.rar
 /v2rayN/v2rayN/obj/
 /v2rayN/.vs/v2rayN/DesignTimeBuild
 /v2rayN/packages
