feat: auto detects live server

--- a/v2rayN/v2rayN/v2rayN.csproj
+++ b/v2rayN/v2rayN/v2rayN.csproj
@@ -163,6 +163,7 @@
     </Compile>
     <Compile Include="Handler\MainFormHandler.cs" />
     <Compile Include="Handler\SpeedtestHandler.cs" />
+    <Compile Include="Handler\SpeedtestLiveHandler.cs" />
     <Compile Include="Handler\StatisticsHandler.cs" />
     <Compile Include="Handler\DownloadHandle.cs" />
     <Compile Include="Base\HttpWebServer.cs" />
